<resources>

    <string name="app_name">AdoptrApp</string>
    <string name="hello_first_fragment">Hello first fragment!</string>
    <string name="toFirstFragment">Page 1</string>
    <string name="support_page_header_text">Support Ticket Page</string>
    <string name="support_spinner1">Select the topic of the ticket:</string>
    <string name="support_spinner2">Narrow down the reason of the ticket:</string>
    <string name="support_page_descriptionText">Please add addition comments for the ticket:</string>
    <string name="supportDescriptionBox">Description</string>
    <string name="support_page_submit_ticket">Submit Ticket</string>
    <string name="navDrawer_admin">Admin</string>
    <string name="navDrawer_create_new_post">Create new post</string>
    <string name="navDrawer_login">Login</string>
    <string name="navDrawer_profile">Profile</string>
    <string name="navDrawer_help">Help</string>
    <string name="navDrawer_support_ticket">Support Ticket</string>
    <string name="navDrawer_contact">Contact</string>
    <string name="navDrawer_register">Sign Up</string>
    <string name="adoptr_logo">adoptr_logo</string>
    <string name="navBottom_profile">Profile</string>
    <string name="navBottom_messages">Messages</string>
    <string name="navBottom_home">Home</string>
    <string name="navBottom_search">Search</string>
    <string name="navBottom_articles">Articles</string>
    <string name="navDrawer_createListing">Create Listing</string>
    <string name="navDrawer_signout">Sign Out</string>
    <string name="button_update_name">Update Name</string>
    <string name="button_change_password">Change Password</string>
    <string name="profile_currentUserName">currentUserName</string>
    <string name="profile_nameHeaderText">Name:</string>
    <string name="profile_pageHeaderText">Profile</string>
    <string name="profile_currentUserEmail">currentUserEmail</string>
    <string name="profile_emailHeaderText">Email:</string>
    <string name="forgot_email_submit_request">Submit Request</string>
    <string name="forgot_password_email_header">Email:</string>
    <string name="forgot_password_page_header">Forgot Password Page</string>
    <string name="forgot_password_desc">Enter your account email below to send a forgot password request to it.</string>
    <string name="forgot_password_enter_email_here">Enter Email here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="up_load_image">Upload Image</string>
    <string name="postcreation_submit">Submit post</string>

    //admin buttons text
    <string name="view_report">View Reports</string>
    <string name="view_user">View Users</string>
    <string name="description_of_pet">Description of pet</string>
    <string name="post_title">Post Title</string>

    <string name="select_tags">Select Tags</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="animal">Animal</string>

    //animal tags
    <string-array name="tag1">
        <item>dog</item>
        <item>cat</item>
        <item>fish</item>
        <item>goat</item>
        <item>horse</item>
        <item>mouse</item>
        <item>rabbit</item>
        <item>pig</item>
        <item>snake</item>
        <item>rat</item>
        <item>turtle</item>
        <item>tortoise</item>
        <item>other</item>
    </string-array>

    //age tags
    <string-array name="tag2">
        <item>0-3</item>
        <item>4-7</item>
        <item>8-12</item>
        <item>12+</item>
    </string-array>

    //gender tags
    <string-array name="tag3">
        <item>female</item>
        <item>male</item>
    </string-array>

    <string name="article_title">Article Title</string>
    <string name="article_description">Article Description</string>
    <string name="create_article">Create article</string>
    <string name="default_body">Default Body</string>
    <string name="default_title">Default Title</string>
    <string name="back_button">back_button</string>
    <string name="default_author">Default Author</string>
    <string name="default_date">Default Date</string>

    <!-- Spinner1 on the support ticket page-->
    <string-array name="supportSpinner1">
        <item>App</item>
        <item>Shelter</item>
        <item>User</item>
        <item>Account</item>
        <item>Other</item>
    </string-array>

    <!-- Spinner2 on the support ticket page-->
    <string-array name="supportSpinner2">
        <item>Bug</item>
        <item>Interaction</item>
        <item>Harassment</item>
        <item>General Support</item>
        <item>Other</item>
    </string-array>
</resources>