<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navBottom_home"
            android:title="@string/navBottom_home"
            android:icon="@drawable/ic_home" />

        <item
            android:id="@+id/navBottom_search"
            android:title="@string/navBottom_search"
            android:icon="@drawable/ic_search" />

        <item
            android:id="@+id/navBottom_article"
            android:title="@string/navBottom_articles"
            android:icon="@drawable/ic_article" />

        <!--
        <item
            android:id="@+id/navBottom_mail"
            android:title="@string/navBottom_messages"
            android:icon="@drawable/ic_mail" />
        -->

        <item
            android:id="@+id/navBottom_profile"
            android:title="@string/navBottom_profile"
            android:icon="@drawable/ic_profile" />

    </group>
</menu>